# personal-playground

./: .gitignore
backend/: package.json  readme.md
backend/employee_register/: main.py  main_test.py  operations.py
backend/go-tdd/: go.mod  readme.md
backend/saga-workflow/: .env  README.md  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  package.json  tsconfig.json
backend/simple_bank/: .gitignore  Makefile  docker-compose.yml  go.mod  main.go  simple_bank.sql  sqlc.yaml
backend/stream-processing-with-faststream/: docker-compose.yml  pyproject.toml
backend/stream-processing-with-faststream/stream_processing_with_faststream/: main.py
backend/stream_processing_with_ksql/: readme.md
data-engineering/titanic-pipeline/: data.py  main.py
devops/: crawler-deployment.yaml  web-deployment.yaml
devops/boot-dev/: api-deployment.yaml  api-service.yaml  crawler-configmap.yaml  crawler-service.yaml  web-service.yaml
devops/eks-terraform/: .terraform.lock.hcl  kubeconfig_learnk8s  main.tf  terraform.tfstate  terraform.tfstate.backup
devtools/cli_apps/: go.mod  readme.md
frontend/astro-frontend-masters/: astro.config.mjs  package-lock.json  package.json
frontend/remix-starter/: package-lock.json  package.json  vite.config.ts
quant/: readme.md
quant/backtesting-platform/: package-lock.json  (+1 more)
robotics_and_iot/: readme.md
robotics_and_iot/rl-beginner-to-mastery/: pyproject.toml
robotics_and_iot/rl-model-with-openai-gym/: pyproject.toml
robotics_and_iot/rl-model-with-openai-gym/rl_model_with_openai_gym/: main.py
(+205 files in other folders)
